--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NEST" Version="7.17.5" />
+    <PackageReference Include="System.Management" Version="7.0.1" />
+  </ItemGroup>
+
 </Project>
