--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -9,8 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\ddd.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="System.Management" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\ddd.jpg" />
   </ItemGroup>
 
 </Project>
