--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="Resources\ddd.jpg" />
+    <None Remove="Resources\image.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <Resource Include="Resources\ddd.jpg" />
+    <Resource Include="Resources\image.png" />
   </ItemGroup>
 
 </Project>
