--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <None Remove="Resources\ddd.jpg" />
     <None Remove="Resources\image.png" />
+    <None Remove="Resources\Weapon_34.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
   <ItemGroup>
     <Resource Include="Resources\ddd.jpg" />
     <Resource Include="Resources\image.png" />
+    <Resource Include="Resources\Weapon_34.png" />
   </ItemGroup>
 
 </Project>
