--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="Resources\ddd.jpg" />
+    <None Remove="Resources\ground1.PNG" />
     <None Remove="Resources\image.png" />
     <None Remove="Resources\Weapon_34.png" />
   </ItemGroup>
@@ -21,6 +22,7 @@
 
   <ItemGroup>
     <Resource Include="Resources\ddd.jpg" />
+    <Resource Include="Resources\ground1.PNG" />
     <Resource Include="Resources\image.png" />
     <Resource Include="Resources\Weapon_34.png" />
   </ItemGroup>
