--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -11,6 +11,10 @@
   <ItemGroup>
     <None Remove="Resources\ddd.jpg" />
     <None Remove="Resources\ground1.PNG" />
+    <None Remove="Resources\ground2.PNG" />
+    <None Remove="Resources\ground3.PNG" />
+    <None Remove="Resources\ground4.PNG" />
+    <None Remove="Resources\ground5.PNG" />
     <None Remove="Resources\image.png" />
     <None Remove="Resources\Weapon_34.png" />
   </ItemGroup>
@@ -23,6 +27,10 @@
   <ItemGroup>
     <Resource Include="Resources\ddd.jpg" />
     <Resource Include="Resources\ground1.PNG" />
+    <Resource Include="Resources\ground2.PNG" />
+    <Resource Include="Resources\ground3.PNG" />
+    <Resource Include="Resources\ground4.PNG" />
+    <Resource Include="Resources\ground5.PNG" />
     <Resource Include="Resources\image.png" />
     <Resource Include="Resources\Weapon_34.png" />
   </ItemGroup>
