--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -16,6 +16,8 @@
     <None Remove="Resources\ground4.PNG" />
     <None Remove="Resources\ground5.PNG" />
     <None Remove="Resources\image.png" />
+    <None Remove="Resources\PLAYER_SHEET.png" />
+    <None Remove="Resources\rock-2d.jpg" />
     <None Remove="Resources\Weapon_34.png" />
   </ItemGroup>
 
@@ -32,6 +34,8 @@
     <Resource Include="Resources\ground4.PNG" />
     <Resource Include="Resources\ground5.PNG" />
     <Resource Include="Resources\image.png" />
+    <Resource Include="Resources\PLAYER_SHEET.png" />
+    <Resource Include="Resources\rock-2d.jpg" />
     <Resource Include="Resources\Weapon_34.png" />
   </ItemGroup>
 
