--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -17,9 +17,9 @@
     <None Remove="Resources\ground4.PNG" />
     <None Remove="Resources\ground5.PNG" />
     <None Remove="Resources\image.png" />
-    <None Remove="Resources\PLAYER_SHEET.png" />
-    <None Remove="Resources\pngegg %283%29.png" />
     <None Remove="Resources\rock-2d.jpg" />
+    <None Remove="Resources\tree.png" />
+    <None Remove="Resources\tree2.png" />
     <None Remove="Resources\Weapon_34.png" />
   </ItemGroup>
 
@@ -37,9 +37,9 @@
     <Resource Include="Resources\ground4.PNG" />
     <Resource Include="Resources\ground5.PNG" />
     <Resource Include="Resources\image.png" />
-    <Resource Include="Resources\PLAYER_SHEET.png" />
-    <Resource Include="Resources\pngegg (3).png" />
     <Resource Include="Resources\rock-2d.jpg" />
+    <Resource Include="Resources\tree.png" />
+    <Resource Include="Resources\tree2.png" />
     <Resource Include="Resources\Weapon_34.png" />
   </ItemGroup>
 
