--- a/Team Project/Team Project.csproj
+++ b/Team Project/Team Project.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Remove="Dictionary1.xaml" />
+    <Page Remove="StylesDictionary.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,13 +35,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
     <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="System.Management" Version="7.0.1" />
     <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Dictionary1.xaml" />
+    <Resource Include="StylesDictionary.xaml" />
     <Resource Include="Resources\campfire.gif" />
     <Resource Include="Resources\cerberusInvert.png" />
     <Resource Include="Resources\ddd.jpg" />
